--- a/app.json
+++ b/app.json
@@ -1,25 +1,12 @@
 {
-  "name": "chinko",
-  "description": "aaa",
-  "keywords": [
-    "XXX",
-    "YYY",
-    "ZZZ"
-  ],
-  "repository": "https://chinko.herokuapp.com/",
-  "logo": "https://raw.githubusercontent.com/xxx/xxx/master/logo.png",
-  "env": {
-    "HUBOT_HEROKU_KEEPALIVE_INTERVAL": {
-      "description": "hubot-heroku-keepalive interval.",
-      "value": ""
-    },
-    "HUBOT_HEROKU_KEEPALIVE_URL": {
-      "description": "hubot-heroku-keepalive URL.",
-      "value": ""
+    "name": "#LINE Messaging API test PHP",
+    "description": "heroku 上にデプロイされる LINE Messaging APIのサーバースクリプト",
+    "repository": "https://github.com/nisidagod/botest.git",
+    
+    "keywords": ["php", "line-messaging-api"],
+    "env": {
+      "LINE_CHANNEL_ACCESS_TOKEN": {
+        "description": "Channel Access Token (LINE developers の Basic information で確認できます)"
+      }
     }
-  },
-  "addons": [
-    "heroku-redis:hobby-dev",
-    "scheduler:standard"
-  ]
 }
